Add missing translation

--- a/translations/el.po
+++ b/translations/el.po
@@ -65,6 +65,10 @@ msgid "Exit game"
 msgstr "Έξοδος"
 
 #: src/Menu/settings.tscn
+msgid "Variable height"
+msgstr "Μεταβλητό ύψος"
+
+#: src/Menu/settings.tscn
 msgid "Return to menu"
 msgstr "Πίσω στο μενού"
 
